--- a/ProjWFFerramentas/App.config
+++ b/ProjWFFerramentas/App.config
@@ -5,6 +5,6 @@
     </startup>
 
   <connectionStrings>
-    <add name="ConnectionSQLServer" connectionString="Data Source=PC-LEONARDO;Initial Catalog=dbferramenta;Integrated Security=True;" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+		<add name="ConnectionSQLServer" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;Initial Catalog=dbferramenta;Integrated Security=True;" providerName="System.Data.SqlClient" />
+	</connectionStrings>
 </configuration>
